--- a/VScode_Git_Sync.ipynb
+++ b/VScode_Git_Sync.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "source": [
-    "### (4) 수정하면"
+    "### (4) 왼쪽 하단에 즉 Python 3.8.6 왼쪽에 동기화 마크가 있는데 클릭하면 동기화가 된다."
    ],
    "cell_type": "markdown",
    "metadata": {}
